# IDE

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: c-cpp.yml
src/: IDE.cpp  IDE.hpp  INCLUDE.cpp  SETTINGS.cpp  editor.cpp  editor.hpp  inputbar.cpp  inputbar.hpp  main.cpp  output.cpp  output.hpp  runner.hpp  toolbar.cpp  toolbar.hpp  utils.cpp  utils.hpp
tests/: CMakeLists.txt  adding_test.json  division_test.json  format_test.json  main_test.cpp  multiplication_test.json  not_json_test.json  null_division_test.json  subtracting_test.json
